--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-    *{
+    * { 
         margin: 0;
         padding: 0;
         font-family: "Candara", "Calibri", "Segoe", "Segoe UI", "Optima", "Arial", "sans-serif";
@@ -6,7 +6,7 @@
     }
     body{
         background-color: rgb(29, 24, 47);
-        color:white
+        color:white;
     }
     .logo{
         width: 80px;
