--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
     * { 
         margin: 0;
         padding: 0;
-        font-family: "Candara", "Calibri", "Segoe", "Segoe UI", "Optima", "Arial", "sans-serif";
         box-sizing: border-box;
+        font-family: "Kanit", sans-serif;
     }
     body{
-        background-color: rgb(29, 24, 47);
+        background-color: rgb(18, 16, 24);
         color:white;
     }
     .logo{
@@ -37,7 +39,7 @@
         color: #000000;
         text-decoration: none;
         font-size: 25px;
-        font-weight:bold;
+        font-weight: 500;
         position: relative;
         margin-right:30px;
 
@@ -56,16 +58,28 @@
         width:100%;
     }
     .header-text{
-        font-family: "Franklin Gothic Medium";
         margin-top: 10%;
         margin-right: 5%;
         font-size: 50px;
         text-align: right;
-        text-shadow: 2px 2px 20px #000000
+        text-shadow: 2px 2px 20px #000000;
+        font-family: "Kanit", sans-serif;
+        font-weight: 500;
+        font-style: normal;
     }
     .header-text span{
         color: #ff94bb;
-        text-shadow: 3px 3px #fff
+        text-shadow: 3px 3px #fff;
+        line-height: 50px;
+    }
+    .header-top {
+        line-height: 100px;
+    }
+    .header-top p {
+        font-size: 90px;
+    }
+    .header-top span{
+        font-size: 90px;
     }
     .youtube-button{
         font-family: "Candara", "Calibri", "Segoe", "Segoe UI", "Optima", "Arial", "sans-serif";
@@ -101,3 +115,189 @@
         
 
     }
+/*---------------ABOUT ME STYLES------------------*/
+#about{
+    padding: 80px 0;
+    color: #fff;
+    font-weight: 400;
+    font-style: normal;
+}
+.container-about {
+    padding: 10px 10%;
+}
+.row {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.about-col-1{
+    flex-basis: 35%;
+}
+.about-col-1 img {
+    width: 90%;
+    border-radius: 15px;
+    transition-duration: 0.3s;
+}
+.about-col-1 img:hover{
+    scale: 1.03;
+    transition: all;
+    transform: rotate(2deg);
+    transition-duration: 0.3s;
+}
+.about-col-2 {
+    flex-basis: 60%;
+}
+.sub-title {
+    font-size:60px;
+    font-weight:500;
+    color:#fff;
+
+}
+.description{
+    font-size: 18px;
+    font-weight:300;
+}
+
+.tab-titles {
+    display: flex;
+    margin: 20px 0px 40px;
+}
+
+.tab-links {
+    margin-right: 50px;
+    font-size: 24px;
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+}
+
+.tab-links::after {
+    content: '';
+    width: 0;
+    height: 3px;
+    background: #ff94bb;
+    position: absolute;
+    left: 0;
+    bottom: -8px;
+    transition: 0.5s;
+    
+}
+
+.tab-links.active-link::after {
+    width: 100%;
+
+}
+
+.tab-contents ul li {
+    list-style: none;
+    margin: 10px 0;
+}
+
+.tab-contents ul li span {
+    color: #ff94bb;
+    font-size: 18px;
+    font-weight:200;
+    
+}
+.tab-contents{
+    display:none;
+    font-weight: 200;
+}
+.tab-contents.active-tab{
+    display: block;
+}
+/*---------------ABOUT ME STYLES------------------*/
+/*---------------PROJECT STYLES------------------*/
+#project{
+    padding: 50px 0;
+}
+.projects-list{
+    display: grid;
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+}
+.project{
+    border-radius: 10px;
+    position: relative;
+    overflow: hidden;
+    transition-duration: 0.3s;
+}
+.project img{
+    width: 100%;
+    border-radius: 10px;
+    display: block;
+    
+}
+.project:hover{
+    scale: 1.03;
+    transition: all;
+    transform: rotate(-2deg);
+    transition-duration: 0.3s;
+}
+
+.layer{
+    width: 100%;
+    height: 0%;
+    background: linear-gradient(rgba(0, 0, 0, 0.23), #000000a3);
+    border-radius: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    display: flex;
+    align-items:center;
+    justify-content: end;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 0px;
+    transition-duration: 0.6s;
+}
+.project:hover .layer{
+    padding-bottom: 30px;
+    height: 100%;
+    transition-duration: 0.6s;
+}
+.layer h3{
+    font-weight: 500;
+    margin-bottom:0px;
+}
+.layer a{
+    margin-top: 8px;
+    color: #ff94bb;
+    text-decoration: none;
+    font-size: 25px;
+    line-height:45px;
+    background: #fff;
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.btn {
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #ff004f;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+}
+.btn:hover {
+    background: #ff004f;
+}
+/*---------------PORTFOLIO STYLES------------------*/
+
+.hidden {
+    display: none;
+}
+.hidden-active {
+    width: 100%;
+    
+}
+/*---------------css for small screens--------------------------------*/
+
