--- a/style.css
+++ b/style.css
@@ -117,13 +117,25 @@
     }
 /*---------------ABOUT ME STYLES------------------*/
 #about{
-    padding: 80px 0;
+    padding: 20px 5%;
     color: #fff;
     font-weight: 400;
     font-style: normal;
+    background-image: url(images/anime\ lounge\ 5-standard-scale-4_00x.png);
+    background-size: cover;
+    background-position: center;
 }
 .container-about {
-    padding: 10px 10%;
+    padding: 70px 10%;
+    display: block;
+    max-width: 95%;
+    margin-top : 10vh;
+    margin-bottom: 10vh;
+    border-radius: 50px;
+    background: rgba(255, 255, 255, 0.244);
+    margin-left:auto;
+    margin-right:auto;
+    
 }
 .row {
     display: flex;
@@ -132,11 +144,16 @@
 }
 .about-col-1{
     flex-basis: 35%;
+    
 }
 .about-col-1 img {
-    width: 90%;
+    width: 100%;
     border-radius: 15px;
     transition-duration: 0.3s;
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.5);
+    
+
+    
 }
 .about-col-1 img:hover{
     scale: 1.03;
@@ -151,16 +168,19 @@
     font-size:60px;
     font-weight:500;
     color:#fff;
+    text-shadow: 1px 1px 5px #000000e7;
 
 }
 .description{
     font-size: 18px;
     font-weight:300;
+    text-shadow: 1px 1px 10px #000000a9;
 }
 
 .tab-titles {
     display: flex;
     margin: 20px 0px 40px;
+    text-shadow: 1px 1px 6px #000000a9;
 }
 
 .tab-links {
@@ -197,6 +217,7 @@
     color: #ff94bb;
     font-size: 18px;
     font-weight:200;
+    text-shadow: 1px 1px 2px #000000a9;
     
 }
 .tab-contents{
@@ -209,7 +230,11 @@
 /*---------------ABOUT ME STYLES------------------*/
 /*---------------PROJECT STYLES------------------*/
 #project{
-    padding: 5px 0;
+    padding: 25px 0;
+}
+.container-project{
+    padding: 10px 10%;
+
 }
 .projects-list{
     display: grid;
