--- a/style.css
+++ b/style.css
@@ -10,9 +10,18 @@
         background-color: rgb(18, 16, 24);
         color:white;
     }
+    html {
+        scroll-behavior: smooth;
+    }
     .logo{
         width: 80px;
         border-radius: 15px;
+        transition-duration: 0.2s;
+    }
+    .logo:hover{
+        scale: 1.1;
+        transform: rotate(-180deg);
+        
     }
     .container{
         padding-top: 30px;
@@ -33,7 +42,10 @@
         display: inline-block;
         list-style: none;
         margin: 10px 20px;
-
+        transition-duration: 0.3s;
+    }
+    nav ul li:hover{
+        scale: 1.05;
     }
     nav ul li a{
         color: #000000;
@@ -93,7 +105,6 @@
         border-radius: 35px;
         box-shadow: 1px 1px 10px #000000;
         float:right;
-        margin-right:6%;
         margin-top:15px;  
         transition: background-color 0.2s;
         transition: margin-top ease 0.2s;
@@ -278,7 +289,7 @@
     text-align: center;
     font-size: 20px;
     padding-bottom: 0px;
-    transition-duration: 0.6s;
+    transition-duration: 0.6s;header-text
 }
 .project:hover .layer{
     padding-bottom: 30px;
@@ -322,7 +333,72 @@
 }
 .hidden-active {
     width: 100%;
-    
+}
+.hidden_mobile {
+    display: none;
 }
 /*---------------css for small screens--------------------------------*/
 
+/* 
+@media screen and (min-width: 1024px) {
+    
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023px) {
+    
+}
+
+@media screen and (max-width: 767px) {
+    .container {
+        width: 980px;
+        height: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 20px;
+        margin-left: calc(100% - 615px);
+    }
+    nav {
+        padding: 5px;
+    }
+    .logo {
+        display: none;
+    }
+    .header-text{
+        margin-top: 10%;
+        margin-right: 5%;
+        font-size: 22px;
+        text-align: right;
+        text-shadow: 2px 2px 20px #000000;
+        font-family: "Kanit", sans-serif;
+        font-weight: 500;
+        font-style: normal;
+    }
+    .header-text span{
+        color: #ff94bb;
+        text-shadow: 3px 3px #fff;
+        line-height: 50px;
+    }
+    .header-top {
+        line-height: 100px;
+    }
+    .header-top p {
+        font-size: 90px;
+    }
+    .header-top span{
+        font-size: 90px;
+    }
+} */
+
+@media only screen and (max-width: 1150px) {
+    .all_container {
+        display: none;
+    }
+    .hidden_mobile {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: red;
+        font-size: 200px;
+    }
+}
